--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 </head>
 <body>
 
+<h1>To Be or Not To Be</h1>
 <h1>Ashley, will you be my Valentine?</h1>
 
 <button class="yes-button" id="yesButton">Yes 😊</button>
